# n-elastic-ip-pool

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  testKeyValueProxy.py
core/constant/: elastic_ip_pool_constant.py
core/helper/: base64_json_helper.py  env_value_helper.py  ip_address_format_helper.py  proxy_address_format_helper.py  sensitive_value_redaction_helper.py  string_hash_helper.py
core/proxy/: elastic_ip_health_check_proxy.py  geonode_free_proxy_list_proxy.py  key_val_store_proxy.py  proxy_scrape_proxy.py
core/repo/: elastic_ip_pool_repo.py  firebase_proxy_usage_history_repo.py
core/service/: elastic_ip_pool_service.py  verbose_elastic_ip_pool_service.py
n_elastic_ip_pool/: __init__.py
prompt/: 0001_key_val_dummy_proxy_flow_prompt.md  0002_key_val_dummy_proxy_verbose_service_prompt.md  0003_proxyscrape_real_proxy_discovery.md  0004_key_val_proxy_list_persistence_prompt.md  0005_professional_verbose_logging_prompt.md  0006_proxy_discovery_state_handoff_prompt.md  0008_senior_repo_security_and_quality_review_result.md  0009_firebase_proxy_usage_history_storage_prompt.md  0010_geonode_free_proxy_list_fallback_prompt.md
raw/proxy/elastic_ip_health_check_proxy/: request.txt
raw/proxy/elastic_ip_health_check_proxy/json/: input.json  output.json
raw/proxy/geonode_free_proxy_list_proxy/: request.txt
raw/proxy/geonode_free_proxy_list_proxy/json/: input.json  output.json
raw/proxy/key_val_store_proxy/: request.txt
raw/proxy/key_val_store_proxy/json/: input.json  output.json
raw/proxy/proxy_scrape_proxy/: request.txt
raw/proxy/proxy_scrape_proxy/json/: input.json  output.json
script/: __init__.py  key_value_proxy_runner.py
skill/n-layer-scaffold/: SKILL.md
skill/proxy-example-contract/: SKILL.md
skill/service-boundary-review/: SKILL.md
skill/test-placeholder/: SKILL.md
test/: test_key_value_proxy_runner.py
test/constant/: test_elastic_ip_pool_constant.py
test/helper/: test_base64_json_helper.py  test_env_value_helper.py  test_ip_address_format_helper.py  test_proxy_address_format_helper.py  test_sensitive_value_redaction_helper.py
test/proxy/: test_elastic_ip_health_check_proxy.py  test_geonode_free_proxy_list_proxy.py  test_key_val_store_proxy.py  test_proxy_scrape_proxy.py
test/repo/: test_elastic_ip_pool_repo.py  test_firebase_proxy_usage_history_repo.py
test/service/: test_elastic_ip_pool_service.py  test_verbose_elastic_ip_pool_service.py
