[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "n-elastic-ip-pool"
version = "0.1.0"
description = "Low-level Python service for managing an Elastic IP / IP pool with clean N-layer architecture."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "n_elastic_ip_pool contributors" },
]
keywords = [
    "elastic-ip",
    "ip-pool",
    "proxy-health-check",
    "n-layer-architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
firebase = [
    "firebase-admin>=6.5.0",
]
test = [
    "pytest==9.1.1",
]

[project.urls]
Homepage = "https://github.com/R4Ajeti/n-elastic-ip-pool"
Repository = "https://github.com/R4Ajeti/n-elastic-ip-pool"
Issues = "https://github.com/R4Ajeti/n-elastic-ip-pool/issues"

[tool.setuptools]
packages = [
    "n_elastic_ip_pool",
    "n_elastic_ip_pool.constant",
    "n_elastic_ip_pool.helper",
    "n_elastic_ip_pool.proxy",
    "n_elastic_ip_pool.repo",
    "n_elastic_ip_pool.service",
]

[tool.setuptools.package-dir]
"n_elastic_ip_pool" = "n_elastic_ip_pool"
"n_elastic_ip_pool.constant" = "core/constant"
"n_elastic_ip_pool.helper" = "core/helper"
"n_elastic_ip_pool.proxy" = "core/proxy"
"n_elastic_ip_pool.repo" = "core/repo"
"n_elastic_ip_pool.service" = "core/service"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
